<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/world_mapi" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/main_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="24dp"
                android:background="#dddddd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/personal_information"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textAllCaps="true" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:entries="@array/gender_array"
                android:prompt="@string/gender_prompt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/age_group_text"
                android:textAllCaps="true" />

            <Spinner
                android:id="@+id/age_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:entries="@array/age_group_array"
                android:prompt="@string/age_prompt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/favorite_tourist_region"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:textSize="8sp"
                android:textColor="#ff0000"
                android:text="@string/multiple_allowed" />

            <CheckBox
                android:id="@+id/tourist_region_africa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_africa"
                android:paddingLeft="24dp" />

            <CheckBox
                android:id="@+id/tourist_region_americas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_americas"
                android:paddingLeft="24dp" />

            <CheckBox
                android:id="@+id/tourist_region_east_asia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_east_asia"
                android:paddingLeft="24dp" />

            <CheckBox
                android:id="@+id/tourist_region_europe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_europe"
                android:paddingLeft="24dp" />

            <CheckBox
                android:id="@+id/tourist_region_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_me"
                android:paddingLeft="24dp" />

            <CheckBox
                android:id="@+id/tourist_region_oceania"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_oceania"
                android:paddingLeft="24dp" />

            <CheckBox
                android:id="@+id/tourist_region_south_asia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region_south_asia"
                android:paddingLeft="24dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="24dp"
                android:background="#dddddd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/question_text"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question1"
                android:textAllCaps="true" />

            <RadioGroup
                android:id="@+id/question1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton android:id="@+id/question1_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question1_answer1"/>

                <RadioButton android:id="@+id/question1_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question1_answer2"/>

                <RadioButton android:id="@+id/question1_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question1_answer3"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question2"
                android:textAllCaps="true" />

            <RadioGroup
                android:id="@+id/question2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton android:id="@+id/question2_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question2_answer1"/>

                <RadioButton android:id="@+id/question2_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question2_answer2"/>

                <RadioButton android:id="@+id/question2_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question2_answer3"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question3"
                android:textAllCaps="true" />

            <RadioGroup
                android:id="@+id/question3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton android:id="@+id/question3_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question3_answer1"/>

                <RadioButton android:id="@+id/question3_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question3_answer2"/>

                <RadioButton android:id="@+id/question3_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question3_answer3"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question4"
                android:textAllCaps="true" />

            <RadioGroup
                android:id="@+id/question4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton android:id="@+id/question4_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question4_answer1"/>

                <RadioButton android:id="@+id/question4_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question4_answer2"/>

                <RadioButton android:id="@+id/question4_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question4_answer3"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question5"
                android:textAllCaps="true" />

            <RadioGroup
                android:id="@+id/question5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton android:id="@+id/question5_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question5_answer1"/>

                <RadioButton android:id="@+id/question5_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question5_answer2"/>

                <RadioButton android:id="@+id/question5_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question5_answer3"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question6"
                android:textAllCaps="true" />

            <RadioGroup
                android:id="@+id/question6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton android:id="@+id/question6_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question6_answer1"/>

                <RadioButton android:id="@+id/question6_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question6_answer2"/>

                <RadioButton android:id="@+id/question6_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question6_answer3"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question7"
                android:textAllCaps="true" />

            <RadioGroup
                android:id="@+id/question7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton android:id="@+id/question7_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question7_answer1"/>

                <RadioButton android:id="@+id/question7_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question7_answer2"/>

                <RadioButton android:id="@+id/question7_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question7_answer3"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/question8"
                android:textAllCaps="true" />

            <RadioGroup
                android:id="@+id/question8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton android:id="@+id/question8_answer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question8_answer1"/>

                <RadioButton android:id="@+id/question8_answer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question8_answer2"/>

                <RadioButton android:id="@+id/question8_answer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/question8_answer3"/>

            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="submitAnswers"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>